...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Usuarios"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"/>

        <EditText
            android:id="@+id/add_task_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:hint="@string/description_hint" />

    </LinearLayout>
...
