...

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <EditText
                                android:id="@+id/alias_text_input"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/alias_hint"
                                android:singleLine="true"
                                android:textAppearance="@style/TextAppearance.AppCompat.Small" />
                        </com.google.android.material.textfield.TextInputLayout>
...
